--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "feed-vue3",
-  "version": "1.0.0",
+  "name": "mayangsik-vue",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "vue": "^3.5.0",
-    "lucide-vue-next": "^0.473.0"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
     "vite": "^6.0.0",
     "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   }
 }
